force-app/main/default/objects/vlocity_cmt__Party_Association__c/vlocity_cmt__Party_Association__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED.</description>
    <label>Party Association</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>