force-app/main/default/objects/vlocity_cmt__Party_Association__c/fields/vlocity_cmt__AssociationName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AssociationName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; vlocity_cmt__ObjectId__c,vlocity_cmt__Object_Value__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Type</label>
    <type>Text</type>
</CustomField>