force-app/main/default/objects/vlocity_cmt__Party_Association__c/fields/vlocity_cmt__Object_Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Object_Value__c</fullName>
    <label>Association Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>