force-app/main/default/objects/vlocity_cmt__Party_Association__c/fields/vlocity_cmt__OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OwnerEmail__c</fullName>
    <formula>vlocity_cmt__OwnerId__r.Email</formula>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>