force-app/main/default/objects/vlocity_cmt__Party_Association__c/fields/vlocity_cmt__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OwnerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Party_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>