force-app/main/default/objects/vlocity_cmt__Party_Association__c/fields/vlocity_cmt__OwnerName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OwnerName__c</fullName>
    <formula>vlocity_cmt__OwnerId__r.FirstName  + &apos; &apos; +  vlocity_cmt__OwnerId__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>