force-app/main/default/objects/vlocity_cmt__Party_Association__c/fields/vlocity_cmt__OwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OwnerPhone__c</fullName>
    <formula>vlocity_cmt__OwnerId__r.Phone</formula>
    <label>Owner Phone</label>
    <type>Text</type>
</CustomField>