force-app/main/default/objects/vlocity_cmt__Party_Association__c/fields/vlocity_cmt__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PartyId__c</fullName>
    <label>Client</label>
    <referenceTo>vlocity_cmt__Party__c</referenceTo>
    <relationshipLabel>Party Associations</relationshipLabel>
    <relationshipName>Party_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>